Archive2/c2/3011e867af9534/output
main.cpp:22:39: error: cannot specialize (with 'template<>') a member of an unspecialized template
class StringList<StreamType, stream>::AddStrings<> {
                                      ^
main.cpp:28:18: warning: unused variable 'stringList' [-Wunused-variable]
    StringList<> stringList;
                 ^
1 warning and 1 error generated.
